; ModuleID = '/home/carl/AnghaBench/git/extr_exec-cmd.c_git_exec_path.c'
source_filename = "/home/carl/AnghaBench/git/extr_exec-cmd.c_git_exec_path.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@exec_path_value = common dso_local global i8* null, align 8
@EXEC_PATH_ENVIRONMENT = common dso_local global i32 0, align 4
@GIT_EXEC_PATH = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i8* @git_exec_path() #0 {
  %1 = alloca i8*, align 8
  %2 = load i8*, i8** @exec_path_value, align 8
  %3 = icmp ne i8* %2, null
  br i1 %3, label %21, label %4

4:                                                ; preds = %0
  %5 = load i32, i32* @EXEC_PATH_ENVIRONMENT, align 4
  %6 = call i8* @getenv(i32 %5)
  store i8* %6, i8** %1, align 8
  %7 = load i8*, i8** %1, align 8
  %8 = icmp ne i8* %7, null
  br i1 %8, label %9, label %17

9:                                                ; preds = %4
  %10 = load i8*, i8** %1, align 8
  %11 = load i8, i8* %10, align 1
  %12 = sext i8 %11 to i32
  %13 = icmp ne i32 %12, 0
  br i1 %13, label %14, label %17

14:                                               ; preds = %9
  %15 = load i8*, i8** %1, align 8
  %16 = call i8* @xstrdup(i8* %15)
  store i8* %16, i8** @exec_path_value, align 8
  br label %20

17:                                               ; preds = %9, %4
  %18 = load i32, i32* @GIT_EXEC_PATH, align 4
  %19 = call i8* @system_path(i32 %18)
  store i8* %19, i8** @exec_path_value, align 8
  br label %20

20:                                               ; preds = %17, %14
  br label %21

21:                                               ; preds = %20, %0
  %22 = load i8*, i8** @exec_path_value, align 8
  ret i8* %22
}

declare dso_local i8* @getenv(i32) #1

declare dso_local i8* @xstrdup(i8*) #1

declare dso_local i8* @system_path(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
